--- a/views/rbac_registrar.ejs
+++ b/views/rbac_registrar.ejs
@@ -40,77 +40,45 @@
                 </tr>
                 <%}%>
     </table>
-                
-    <!--input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
-
-    <table id="myTable">
-      <tr class="header">
-        <th style="width:60%;">Name</th>
-        <th style="width:40%;">Country</th>
-      </tr>
-      <tr>
-        <td>Alfreds Futterkiste</td>
-        <td>Germany</td>
-      </tr>
-      <tr>
-        <td>Berglunds snabbkop</td>
-        <td>Sweden</td>
-      </tr>
-      <tr>
-        <td>Island Trading</td>
-        <td>UK</td>
-      </tr>
-      <tr>
-        <td>Koniglich Essen</td>
-        <td>Germany</td>
-      </tr>
-    </table--> 
 
   <!-- Modal Structure -->
-  <div id="modal1" class="modal">
+  <div id="modal1" class="modal modal-fixed-footer">
     <div class="modal-content" id="modal_user">
-        <div class="row">
+      <div>
     <div class="col s12">
-
-      <div class="col s4" style="text-align: center;">
-        <img src="https://img.freepik.com/vector-premium/perfil-avatar-hombre-icono-redondo_24640-14044.jpg?w=2000" height="50%" width="50%"   alt="" class="circle responsive-img">
-        <h6 id="nom_user"></h6>
+      <div class="col s6">
+        <div id="nom_user"></div>
+        <div id="correo"></div>
       </div>
 
-      <div class="col s6">
-        <div id="correo">
-          
-        </div>
-        <br>
-        <br>
+        <div class="col s6">
         <div>
           <div class="input-field">
           <select id="sl_roles">
           </select>
           <label>Rol</label>
           </div>
-
           <div class="input-field">
             <select id="sl_museos">
             </select>
             <label>Museos</label>
           </div>
-
         </div>
-      </div>
+        </div>
 
     </div>
-    </div>
+
     </div>
 
+    </div>
     <div class="modal-footer">
       <a onclick="closeUser()" class="modal-close waves-effect waves-green btn-flat" id="salir">Salir</a>
-      <a onclick="updateUser()" class="modal-close waves-effect waves-green btn-flat">Guardar Cambios</a>
+      
+      <a onclick="updateUser()" class=" modal-close waves-effect waves-green btn-flat" id="guardar">Guardar Cambios</a>
     </div>
   </div>
-          
-      <br>
   </div>
+
 
 
   <script src="/js/script_update_user.js"></script>
