--- a/views/editar_guia.ejs
+++ b/views/editar_guia.ejs
@@ -31,19 +31,19 @@
                 <div class="col s9">
                     <div class="row">
                         <div class="col s6">
-                            <h5>Nombre dela Limitacion </h5>
+                            <h5>Nombre de la Limitación </h5>
                             <!-- <label for="nombre_limitacion">Nombre de la Limitacion</label> -->
                             <input id="nombre_limitacion" value="<%= nombre %> " type="text" name="nombre">
                         </div>
                         <div class="col s6">
-                            <h5>Icono</h5>
+                            <h5>Ícono</h5>
                             <!-- <label for="icono_limitacion">Icono de la Limitación</label> -->
                             <input id="icono_limitacion" type="file" class="customFile" value="<%= icono %> " accept="image/png, image/jpg, image/jpeg" name="icono">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col s12">
-                            <h5>Descripcion</h5>
+                            <h5>Descripción</h5>
                             <textarea placeholder="Descripcion de Limitacion..." id="textarea2" class="materialize-textarea" data-length="120" name="descripcion"><%= descripcion %> </textarea>
                             <!-- <label for="textarea2">Descripcion</label> -->
                           </div>
@@ -62,7 +62,7 @@
             <div class="row valign-wrapper">
                 <div class="col s1" style="margin-top: 0px;" ></div>
                 <div class="col s3" style="margin: auto 0;" >
-                    <h5 class="center" >Optional Video</h5>
+                    <h5 class="center" >Video Opcional</h5>
                 </div>
                 <div class="col s7" style="margin: auto 0;" >
                     <div class="left">
