--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,9 @@ main {
 .border-radius-6{
     border-radius: 6px !important;
 }
+
+.content-wrapper-before{position:absolute;z-index:-1;top:64px;left:0;width:100%;height:185px;-webkit-transition:.3s ease all;transition:.3s ease all}
+
 #blog-list .card.horizontal{overflow:hidden;max-height:200px}
 #blog-list .social-icon{width:7.5rem}
 .social-icon .material-icons:hover{cursor:pointer!important}
