fixed format and added comments

--- a/views/museo_registrar.ejs
+++ b/views/museo_registrar.ejs
@@ -1,154 +1,107 @@
 <%- include('includes/header_image.ejs') %>
-<main>
-<form method="POST" enctype="multipart/form-data">
-  <div class="container">
-    <% for (let museo of museos){%>
-    <h1 class="white-text"><%=museo.nom_museo%></h1>
-    <div class="white min-container">
-      <div class="row center margin-10">
-        <!-- valign-wrapper -->
-        <div class="col s5">
-          <div class="row valign-wrapper">
-            <div class="col s10">
-              <div class="card">
-                <div class="card-image">
-                  <input value="<%=museo.imgP_museo%>" name="museo_url" style="display:none">
-                  <img class="imgPicker imgP" src='/uploads/<%=museo.imgP_museo%>'/>
-                  <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
-                  <input class="file-upload" id="filebutton" type="file" name="url_imagen" style="display:none">
+  <main>
+    <form method="POST" enctype="multipart/form-data">
+      <div class="container">
+        <% for (let museo of museos){%>
+          <h1 class="white-text">
+            <%=museo.nom_museo%>
+          </h1>
+          <div class="white min-container">
+            <div class="row center margin-10">
+              <!-- valign-wrapper -->
+              <div class="col s5">
+                <div class="row valign-wrapper">
+                  <div class="col s10">
+                    <div class="card">
+                      <div class="card-image">
+                        <input value="<%=museo.imgP_museo%>" name="museo_url" style="display:none">
+                        <img class="imgPicker imgP" src='/uploads/<%=museo.imgP_museo%>' />
+                        <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
+                          onclick="filebutton.click()"><i class="material-icons">edit</i></div>
+                        <input class="file-upload" id="filebutton" type="file" name="url_imagen" style="display:none">
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-        <div class="col s7">
-          <div class="row center">
-            <div class="input-field col s10 offset-s1">
-              <input
-                placeholder="Ej: MAQRO"
-                id="nom_museo"
-                name="nom_museo"
-                type="text"
-                class="validate"
-                value="<%=museo.nom_museo%>"
-              />
-              <label for="nom_museo"> Nombre del Museo </label>
-            </div>
-            <div class="input-field col s10 offset-s1">
-                <input
-                  placeholder="Ej: 442-212-2357"
-                  id="num_museo"
-                  name="num_museo"
-                  type="text"
-                  class="validate"
-                  value="<%=museo.num_museo%>"
-                />
-                <label for="num_museo"> Teléfono de contacto </label>
-              </div>
-                
-                <div class="input-field col s9 offset-s1">
-                    <input placeholder="Ej: C. Ignacio Allende Sur 14" id="direccion_museo" name="direccion_museo" type="text" class="validate" value="<%=museo.ubicacion_museo%>">
-                    <label for="direccion_museo"> Dirección </label> 
-                </div>
-                <a style="margin-right:30px;margin-top:10px" class="btn-floating waves-effect waves-light primary-color"><i class="material-icons left">location_on</i> </a>
-          <div class="row center">
-            <div class="col offset-s1">
-                <!--<table>-->
-              <div class="col">
-                <a href="/museo/<%=museo.id_museo%>/sala" class="btn waves-effect waves-light primary-color"
-                  ><i class="material-icons left">add_box</i>Edita las salas
-                </a>
-              </div>
-              <div class="col">
-                <a class="btn waves-effect waves-light primary-color modal-trigger"  href="#modal1"
-                  ><i class="material-icons left">calendar_month</i>Modifica
-                  horarios
-                </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Modal Structure -->
-          <div id="modal1" class="modal">
-            <div class="modal-content">
-              <h4>Modifica los horarios</h4>
-              <table>
-                  <thead>
-                    <tr>
-                        <th>Día de la semana</th>
-                        <th>Hora Apertura</th>
-                        <th>Hora Cierre</th>
-                    </tr>
-                  </thead>
-          
-                  <!-- <tbody>
-                    <tr>
-                      <td>Lunes</td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                    </tr>
-                    <tr>
-                      <td>Martes</td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                    </tr>
-                    <tr>
-                      <td>Miercoles</td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                    </tr>
-                    <tr>
-                      <td>Jueves</td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                    </tr>
-                    <tr>
-                      <td>Viernes</td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                    </tr>
-                    <tr>
-                      <td>Sabado</td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                    </tr>
-                    <tr>
-                      <td>Domingo</td>
-                      <td><input type="time" id="appt" name="appt" required/></td>
-                      <td><input class="timepicker" placeholder="Selecciona una hora"/></td>
-                    </tr>
-                  </tbody> -->
-                </table>
-            </div>
-            <div class="modal-footer">
-              <a
-                href="#!"
-                class="modal-close waves-effect waves-green btn-flat"
-                >Agree</a
-              >
-            </div>
-        </div>
-      </div>   
+              <div class="col s7">
+                <div class="row center">
+                  <div class="input-field col s10 offset-s1">
+                    <input placeholder="Ej: MAQRO" id="nom_museo" name="nom_museo" type="text" class="validate"
+                      value="<%=museo.nom_museo%>" />
+                    <label for="nom_museo"> Nombre del Museo </label>
+                  </div>
+                  <div class="input-field col s10 offset-s1">
+                    <input placeholder="Ej: 442-212-2357" id="num_museo" name="num_museo" type="text" class="validate"
+                      value="<%=museo.num_museo%>" />
+                    <label for="num_museo"> Teléfono de contacto </label>
+                  </div>
 
-      <div class="row center margin-10">
-        <div class="input-field col s10 offset-s1">
-          <textarea id="desc_museo" name="desc_museo" class="materialize-textarea"><%=museo.desc_museo%></textarea>
-          <label for="textarea1"> Descripción </label>
-        </div>
-        <input style="display:none" name="id_museo" value="<%=museo.id_museo%>">
-        <button type="submit" value="upload" class="btn waves-effect waves-light green margin-10">
-          <i class="material-icons left">check</i>
-          Guardar cambios
-      </button>
-        <!-- <button onclick="editMuseum(this)" id="<%=museo.id_museo%>" class="btn waves-effect waves-light green margin-10">
+                  <div class="input-field col s9 offset-s1">
+                    <input placeholder="Ej: C. Ignacio Allende Sur 14" id="direccion_museo" name="direccion_museo"
+                      type="text" class="validate" value="<%=museo.ubicacion_museo%>">
+                    <label for="direccion_museo"> Dirección </label>
+                  </div>
+                  <a style="margin-right:30px;margin-top:10px"
+                    class="btn-floating waves-effect waves-light primary-color"><i
+                      class="material-icons left">location_on</i> </a>
+                  <div class="row center">
+                    <div class="col offset-s1">
+                      <!--<table>-->
+                      <div class="col">
+                        <a href="/museo/<%=museo.id_museo%>/sala" class="btn waves-effect waves-light primary-color"><i
+                            class="material-icons left">add_box</i>Edita las salas
+                        </a>
+                      </div>
+                      <div class="col">
+                        <a class="btn waves-effect waves-light primary-color modal-trigger" href="#modal1"><i
+                            class="material-icons left">calendar_month</i>Modifica
+                          horarios
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal Structure -->
+                <div id="modal1" class="modal">
+                  <div class="modal-content">
+                    <h4>Modifica los horarios</h4>
+                    <table>
+                      <thead>
+                        <tr>
+                          <th>Día de la semana</th>
+                          <th>Hora Apertura</th>
+                          <th>Hora Cierre</th>
+                        </tr>
+                      </thead>
+                    </table>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row center margin-10">
+                <div class="input-field col s10 offset-s1">
+                  <textarea id="desc_museo" name="desc_museo"
+                    class="materialize-textarea"><%=museo.desc_museo%></textarea>
+                  <label for="textarea1"> Descripción </label>
+                </div>
+                <input style="display:none" name="id_museo" value="<%=museo.id_museo%>">
+                <button type="submit" value="upload" class="btn waves-effect waves-light green margin-10">
+                  <i class="material-icons left">check</i>
+                  Guardar cambios
+                </button>
+                <!-- <button onclick="editMuseum(this)" id="<%=museo.id_museo%>" class="btn waves-effect waves-light green margin-10">
           <i class="material-icons left">check</i>
           Guardar cambios
         </button> -->
-      </div>
-    </div>
-    <%}%>    
+              </div>
+            </div>
+            <%}%>
 
-    <script src="/js/script_editar_museo.js"></script>
-</main>
-</form>
-<%- include('includes/footer.ejs') %>
+              <script src="/js/script_editar_museo.js"></script>
+  </main>
+  </form>
+  <%- include('includes/footer.ejs') %>
