--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -1,84 +1,90 @@
 <%- include('includes/header_image.ejs') %>
-<!-- <style>
+    <!-- <style>
     body {
   background-image: url('/img/queretaro-dark.jpg');
   background-size: cover;
 }
 </style> -->
-<link rel="stylesheet" href="/css/style_evento.css">
- 
-<div class="bg"></div>
-<div class="bg bg2"></div>
-<div class="bg bg3"></div>
-<div class="container" style="margin-bottom: 10%;">
-    <h1 class="white-text">Agregar Nueva Guía</h4>
-    <div class="white" style="padding-top: 2em; padding-bottom: 2em;">
-        <form action="/guias/agregar_guia" method="POST">
-            <div class="row  valign-wrapper" style="margin-bottom: 0px;">
-                <div class="col s3 center">
-                    <div class="card" style="border-radius: 20px;">
-                        <div class="card-image">
-                            <img src="../assets/img/image_placeholder.jpg" style="border-radius: 20px;">
-                            <div class="file-field input-field">
-                                <a type="file" class="btn-floating halfway-fab waves-effect waves-light blue-gradient-btn">
-                                    <input type="file" accept="image/png, image/jpg, image/jpeg" name="imagen">
-                                    <i class="tiny material-icons">edit</i>
-                                </a>
+    <link rel="stylesheet" href="/css/style_evento.css">
+
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="container" style="margin-bottom: 10%;">
+        <h1 class="white-text">Agregar Nueva Guía</h4>
+            <div class="white" style="padding-top: 2em; padding-bottom: 2em;">
+                <form action="/guias/agregar_guia" method="POST">
+                    <div class="row  valign-wrapper" style="margin-bottom: 0px;">
+                        <div class="col s3 center">
+                            <div class="card" style="border-radius: 20px;">
+                                <div class="card-image">
+                                    <img src="../assets/img/image_placeholder.jpg" style="border-radius: 20px;">
+                                    <div class="file-field input-field">
+                                        <a type="file"
+                                            class="btn-floating halfway-fab waves-effect waves-light blue-gradient-btn">
+                                            <input type="file" accept="image/png, image/jpg, image/jpeg" name="imagen">
+                                            <i class="tiny material-icons">edit</i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s9">
+                            <div class="row">
+                                <div class="col s6">
+                                    <h5>Nombre de la Limitación</h5>
+                                    <!-- <label for="nombre_limitacion">Nombre de la Limitacion</label> -->
+                                    <input id="nombre_limitacion" placeholder="Ejemplo: Limitaciones Visuales"
+                                        type="text" name="nombre">
+                                </div>
+                                <div class="col s6">
+                                    <h5>Icono</h5>
+                                    <!-- <label for="icono_limitacion">Icono de la Limitación</label> -->
+                                    <input id="icono_limitacion" type="file" class="customFile"
+                                        accept="image/png, image/jpg, image/jpeg" name="icono">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col s12">
+                                    <h5>Descripcion</h5>
+                                    <textarea placeholder="Descripcion de Limitacion..." id="textarea2"
+                                        class="materialize-textarea" data-length="120" name="descripcion"></textarea>
+                                    <!-- <label for="textarea2">Descripcion</label> -->
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col s9">
-                    <div class="row">
-                        <div class="col s6">
-                            <h5>Nombre de la Limitación</h5>
-                            <!-- <label for="nombre_limitacion">Nombre de la Limitacion</label> -->
-                            <input id="nombre_limitacion" placeholder="Ejemplo: Limitaciones Visuales" type="text" name="nombre">
-                        </div>
-                        <div class="col s6">
-                            <h5>Icono</h5>
-                            <!-- <label for="icono_limitacion">Icono de la Limitación</label> -->
-                            <input id="icono_limitacion" type="file" class="customFile" accept="image/png, image/jpg, image/jpeg" name="icono">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12">
-                            <h5>Descripcion</h5>
-                            <textarea placeholder="Descripcion de Limitacion..." id="textarea2" class="materialize-textarea" data-length="120" name="descripcion"></textarea>
+                    <div class="row valign-wrapper" style="margin-bottom: 0px;">
+                        <div class="col s1" style="margin-top: 0px;"></div>
+                        <div class="col s10" style="margin-top: 0px; margin-bottom: 1em;">
+                            <h5>TIPS</h5>
+                            <textarea placeholder="Escribe Tips..." id="textarea2" class="materialize-textarea"
+                                data-length="200" name="tip"></textarea>
                             <!-- <label for="textarea2">Descripcion</label> -->
-                          </div>
+                        </div>
+                        <div class="col s1" style="margin-top: 0px;"></div>
                     </div>
-                </div>
-            </div>
-            <div class="row valign-wrapper" style="margin-bottom: 0px;">
-                <div class="col s1" style="margin-top: 0px;" ></div>
-                <div class="col s10" style="margin-top: 0px; margin-bottom: 1em;" >
-                    <h5>TIPS</h5>
-                    <textarea placeholder="Escribe Tips..." id="textarea2" class="materialize-textarea" data-length="200" name="tip"></textarea>
-                    <!-- <label for="textarea2">Descripcion</label> -->
-                </div>
-                <div class="col s1" style="margin-top: 0px;" ></div>
-            </div>
-            <div class="row valign-wrapper">
-                <div class="col s1" style="margin-top: 0px;" ></div>
-                <div class="col s3" style="margin: auto 0;" >
-                    <h5 class="center" >Optional Video</h5>
-                </div>
-                <div class="col s7" style="margin: auto 0;" >
-                    <div class="left">
-                        <!-- <input id="icono_limitacion" type="file" accept="image/png, image/jpg, image/jpeg, Video/mp4" class="customFileVideo"> -->
-                        <input type="text" placeholder="Link del Video..." name="video">
+                    <div class="row valign-wrapper">
+                        <div class="col s1" style="margin-top: 0px;"></div>
+                        <div class="col s3" style="margin: auto 0;">
+                            <h5 class="center">Optional Video</h5>
+                        </div>
+                        <div class="col s7" style="margin: auto 0;">
+                            <div class="left">
+                                <!-- <input id="icono_limitacion" type="file" accept="image/png, image/jpg, image/jpeg, Video/mp4" class="customFileVideo"> -->
+                                <input type="text" placeholder="Link del Video..." name="video">
+                            </div>
+                        </div>
+                        <div class="col s1" style="margin-top: 0px;"></div>
                     </div>
-                </div>
-                <div class="col s1" style="margin-top: 0px;" ></div>
-            </div>
-            <div class="row center" style="margin-top: 1.5em;">
-                <input type="submit" class="blue-gradient-btn btn-large hoverable" style="color: white; width: 70%;" value="Agregar Guía">
-            </div>
-        </form>
-    
-        
-    </div>
-</div>
+                    <div class="row center" style="margin-top: 1.5em;">
+                        <input type="submit" class="blue-gradient-btn btn-large hoverable"
+                            style="color: white; width: 70%;" value="Agregar Guía">
+                    </div>
+                </form>
 
-<%- include('includes/footer.ejs') %>
+
+            </div>
+    </div>
+
+    <%- include('includes/footer.ejs') %>
