--- a/views/nuevo_evento.ejs
+++ b/views/nuevo_evento.ejs
@@ -1,88 +1,95 @@
 <%- include('includes/header_image.ejs') %>
-<link rel="stylesheet" href="/css/style_evento.css">
-<main>
-  <div class="bg"></div>
-  <div class="bg bg2"></div>
-  <div class="bg bg3"></div>
-<form name="form1" id="nuevo_imagen" method="POST" enctype="multipart/form-data">
-<div class="container">
-    <h1 class="white-text">Nuevo evento</h1>
-    
-        <div class="white min-container">
-            <div class="row center margin-10">  
-                <!-- valign-wrapper -->
-                <div class="col s5">
-                    <div class="row valign-wrapper">
-                        <div class="col s10">
-                            <div class="card imgPicker">
-                                <div class="card-image">
-                                  <img class="imgPicker imgP" src="../img/no-img.jpg">
-                                  <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
-                                  <input class="file-upload" id="filebutton" type="file" name='url_imagen' style="display:none">
-                                </div>
-                              </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s7"> 
-                    <div class="row center">
-                        <div class="input-field col s10 offset-s1">
-                            <input placeholder="Ej: Noche de Peliculas" id="info_evento" name="info_evento" type="text" class="validate" required>
-                            <label for="info_evento"> Nombre del Evento </label>
-                        </div>
+    <link rel="stylesheet" href="/css/style_evento.css">
+    <main>
+        <div class="bg"></div>
+        <div class="bg bg2"></div>
+        <div class="bg bg3"></div>
+        <form name="form1" id="nuevo_imagen" method="POST" enctype="multipart/form-data">
+            <div class="container">
+                <h1 class="white-text">Nuevo evento</h1>
 
-                    </div>
-                    <div class="row center">
+                <div class="white min-container">
+                    <div class="row center margin-10">
+                        <!-- valign-wrapper -->
+                        <div class="col s5">
+                            <div class="row valign-wrapper">
+                                <div class="col s10">
+                                    <div class="card imgPicker">
+                                        <div class="card-image">
+                                            <img class="imgPicker imgP" src="../img/no-img.jpg">
+                                            <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
+                                                onclick="filebutton.click()"><i class="material-icons">edit</i></div>
+                                            <input class="file-upload" id="filebutton" type="file" name='url_imagen'
+                                                style="display:none">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col s7">
+                            <div class="row center">
+                                <div class="input-field col s10 offset-s1">
+                                    <input placeholder="Ej: Noche de Peliculas" id="info_evento" name="info_evento"
+                                        type="text" class="validate" required>
+                                    <label for="info_evento"> Nombre del Evento </label>
+                                </div>
+
+                            </div>
+                            <div class="row center">
                                 <div class="input-field col s5 offset-s1">
-                                <input id="fecha_start" name="fecha_start" type="text" class="datepicker" required>
-                                <label for="fecha_start"> Fecha Inicio:</label>
+                                    <input id="fecha_start" name="fecha_start" type="text" class="datepicker" required>
+                                    <label for="fecha_start"> Fecha Inicio:</label>
                                 </div>
                                 <div class="input-field col s5 ">
-                                  <input id="fecha_end" name="fecha_end" type="text" class="datepicker" required>
-                                  <label for="fech_end"> Fecha Fin:</label>
-                                  </div>
-                                 <div class="input-field col s5 offset-s1">
-                                  <input id="hora_inicio" name="hora_inicio" type="text" class="timepicker"  required>
-                                  <label for="hora_inicio"> Hora Inicio:</label>
-                                  </div>
+                                    <input id="fecha_end" name="fecha_end" type="text" class="datepicker" required>
+                                    <label for="fech_end"> Fecha Fin:</label>
+                                </div>
+                                <div class="input-field col s5 offset-s1">
+                                    <input id="hora_inicio" name="hora_inicio" type="text" class="timepicker" required>
+                                    <label for="hora_inicio"> Hora Inicio:</label>
+                                </div>
 
                                 <div class="input-field col s5">
-                                  <input id="hora_fin" name="hora_fin" type="text" class="timepicker" required>
-                                  <label for="hora_fin"> Hora Fin:</label>
-                                  </div>
+                                    <input id="hora_fin" name="hora_fin" type="text" class="timepicker" required>
+                                    <label for="hora_fin"> Hora Fin:</label>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="row center margin-10">
+
+                        <div class="input-field col s5">
+                            <input placeholder="Ej: C. Ignacio Allende Sur 14" name="ubicacion_evento"
+                                id="ubicacion_evento" type="text" class="validate" required>
+                            <label for="ubicacion_evento"> Dirección </label>
+                        </div>
+
+                        <div class="input-field col s5">
+                            <select multiple id="sevento" name="sevento" required>
+                                <% for (let tag of tags){%>
+                                    <option value='<%=tag.id_tag%>'>
+                                        <%=tag.nom_tag%>
+                                    </option>
+                                    <%}%>
+                            </select>
+                            <label> * Categorias del evento (requerido)</label>
+                        </div>
+
+                    </div>
+                    <div class="row center margin-10">
+                        <button type="submit" value="upload" class="btn waves-effect waves-light green margin-10"
+                            onclick="return checkform()">
+                            <i class="material-icons left">check</i>
+                            Registrar Evento
+                        </button>
                     </div>
                 </div>
 
             </div>
-            
-            <div class="row center margin-10">  
-                
-                <div class="input-field col s5">
-                        <input placeholder="Ej: C. Ignacio Allende Sur 14" name="ubicacion_evento" id="ubicacion_evento" type="text" class="validate" required>
-                    <label for="ubicacion_evento"> Dirección </label> 
-                </div>
+        </form>
+    </main>
 
-                <div class="input-field col s5">
-                    <select multiple id="sevento" name="sevento" required>
-                      <% for (let tag of tags){%>
-                      <option value='<%=tag.id_tag%>'><%=tag.nom_tag%></option>
-                      <%}%>
-                    </select>
-                    <label> * Categorias del evento (requerido)</label>
-                  </div>
-
-            </div>
-            <div class="row center margin-10">  
-                <button type="submit" value="upload" class="btn waves-effect waves-light green margin-10" onclick="return checkform()">
-                    <i class="material-icons left">check</i>
-                    Registrar Evento
-                </button>
-            </div>
-        </div>   
-    
-</div>
-</form>
-</main>
-
-<script src="/js/script_nuevo_evento.js"></script>
-<%- include('includes/footer.ejs') %>
+    <script src="/js/script_nuevo_evento.js"></script>
+    <%- include('includes/footer.ejs') %>
