--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -2,90 +2,116 @@
   <main>
     <div class="row">
       <div class="content-wrapper-before blue-gradient" style="height:250px"">
-        <img class="parallax-img" style="object-fit: cover; height:250px;width: 100%;opacity: 0.2;" src="/img/login.jpg"/>
-      </div>
-      <div class="breadcrumbs-dark pb-0 pt-4">
-        <div class="container-pers">
-          <div class="row margin-0">
-            <h3 class="white-text"> Administración de la aplicación móvil de Qultura </h3>     
-          </div>
+        <img class=" parallax-img" style="object-fit: cover; height:250px;width: 100%;opacity: 0.2;"
+        src="/img/login.jpg" />
+    </div>
+    <div class="breadcrumbs-dark pb-0 pt-4">
+      <div class="container-pers">
+        <div class="row margin-0">
+          <h3 class="white-text"> Administración de la aplicación móvil de Qultura </h3>
         </div>
       </div>
+    </div>
 
-      <!-- Main Page -->
-      <div class="col s12">
-        <div class="container-pers">
-              <!-- <a href="/museo/nuevo_museo" style="margin-top: 40px; margin-bottom: 0px;" class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a> -->
-            
-          <div class="row">  
-            <ul id ="cards" class="cards">
-              <% for (let museo of museos){%>
-                <%if(museo.status == 1){%>
-                  <li class="card-pers card-panel z-depth-3 border-radius-6 mt-10 card-animation-1">
-                    <a class="margin-0 center-align">
-                      <img class="imgr border-radius-8 z-depth-4 image-n-margin" src="/uploads/<%=museo.imgP_museo%>">
-                    </a>
-                    <h6 class="primary-color-txt text-darken-3 mt-5"><b><%=museo.nom_museo%></b></h6><br>
-                    <span>
-                      <div class="valign-wrapper"> <i class="material-icons space-icon"> call </i>  <p class="no-spacing"> Tel: <%=museo.num_museo%> </p> </div>
-                      <p><%=museo.desc_museo.substring(0, 90)%> . . .</p>
-                    </span>
-                    <div class="display-flex justify-content-between flex-wrap  mt-4">
-                      <div class="display-flex mt-3 right-align social-icon">
-                        <a href="/museo/<%=museo.id_museo%>" class="primary-color-txt"> <i class="material-icons">edit </i>  </a>
-                        <a onclick="deleteMuseum(this)" id="<%=museo.id_museo%>" class="primary-color-txt"> <i class="material-icons">delete</i> </a>
-                      </div>
+    <!-- Main Page -->
+    <div class="col s12">
+      <div class="container-pers">
+        <!-- <a href="/museo/nuevo_museo" style="margin-top: 40px; margin-bottom: 0px;" class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a> -->
+
+        <div class="row">
+          <ul id="cards" class="cards">
+            <% for (let museo of museos){%>
+              <%if(museo.status==1){%>
+                <li class="card-pers card-panel z-depth-3 border-radius-6 mt-10 card-animation-1">
+                  <a class="margin-0 center-align">
+                    <img class="imgr border-radius-8 z-depth-4 image-n-margin" src="/uploads/<%=museo.imgP_museo%>">
+                  </a>
+                  <h6 class="primary-color-txt text-darken-3 mt-5"><b>
+                      <%=museo.nom_museo%>
+                    </b></h6><br>
+                  <span>
+                    <div class="valign-wrapper"> <i class="material-icons space-icon"> call </i>
+                      <p class="no-spacing"> Tel: <%=museo.num_museo%>
+                      </p>
                     </div>
-                  </li>
+                    <p>
+                      <%=museo.desc_museo.substring(0, 90)%> . . .
+                    </p>
+                  </span>
+                  <div class="display-flex justify-content-between flex-wrap  mt-4">
+                    <div class="display-flex mt-3 right-align social-icon">
+                      <a href="/museo/<%=museo.id_museo%>" class="primary-color-txt"> <i class="material-icons">edit
+                        </i> </a>
+                      <a onclick="deleteMuseum(this)" id="<%=museo.id_museo%>" class="primary-color-txt"> <i
+                          class="material-icons">delete</i> </a>
+                    </div>
+                  </div>
+                </li>
                 <%}%>
-              <%}%>
-            </ul>
-          </div>
+                  <%}%>
+          </ul>
+        </div>
 
-          <div class="row flex">
-            <div class="col s10">
-              <h4 class="text-bold"> Lista de eventos </h4>
-            </div>   
-            <div class="col s2">
-              <a href="/evento/nuevo_evento" style="margin-top: 40px; margin-bottom: 0px;" class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a>
-            </div>   
+        <div class="row flex">
+          <div class="col s10">
+            <h4 class="text-bold"> Lista de eventos </h4>
           </div>
-          <div class="row">
-            <ul id="cardsevents" class="cards">
-              <% for (let evento of eventos){%>
-                  <li class="card-pers card-panel z-depth-3 border-radius-6 mt-10 card-animation-1">
-                    <a class="margin-0 center-align">
-                      <img class="imgr border-radius-8 z-depth-4 image-n-margin" src="/uploads/<%=evento.multimedia_evento%>">
-                    </a>
-                    <h6 class="primary-color-txt text-darken-3 mt-5"><b><%=evento.info_evento%></b></h6>
-                    <span>
-                      <%if( evento.fecha_hora_evento.substring(0,10) === evento.fecha_hora_evento.substring(11,21) ){%>
-                        <div class="valign-wrapper"> <i class="material-icons space-icon"> calendar_month </i> <p> Fecha: <%=evento.fecha_hora_evento.substring(0,10)%> </p></div>
-                      <%}else{%>
-                        <div class="valign-wrapper"> <i class="material-icons space-icon"> calendar_month </i><p> Fecha: <%=evento.fecha_hora_evento.substring(0,10)%> - <%=evento.fecha_hora_evento.substring(11,21)%></p></div>
-                      <%}%>
-                      <div class="valign-wrapper">  <i class="material-icons space-icon"> schedule </i> <p>Horario: <%=evento.fecha_hora_evento.substring(22,27)%> - <%=evento.fecha_hora_evento.substring(27,39)%> </p></div>
-                          <% for (let tag of tags){%>
-                            <% if (evento.id_evento == tag.id_evento_tag){ %>
-                              <div class="chip">
-                                <%= tag.nom_tag %>
-                              </div>
-                            <%}%>
-                          <%}%>
-                      </p> 
-                    </span>
-                    <div class="display-flex justify-content-between flex-wrap  mt-4">
-                      <div class="display-flex mt-3 right-align social-icon">
-                        <a onclick="deleteEvento(this)" id="<%=evento.id_evento%>" class="primary-color-txt"> <i class="material-icons">delete</i> </a>
-                      </div>
-                    </div>
-                  </li>
-              <%}%>
-            </ul>
+          <div class="col s2">
+            <a href="/evento/nuevo_evento" style="margin-top: 40px; margin-bottom: 0px;"
+              class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a>
           </div>
         </div>
+        <div class="row">
+          <ul id="cardsevents" class="cards">
+            <% for (let evento of eventos){%>
+              <li class="card-pers card-panel z-depth-3 border-radius-6 mt-10 card-animation-1">
+                <a class="margin-0 center-align">
+                  <img class="imgr border-radius-8 z-depth-4 image-n-margin"
+                    src="/uploads/<%=evento.multimedia_evento%>">
+                </a>
+                <h6 class="primary-color-txt text-darken-3 mt-5"><b>
+                    <%=evento.info_evento%>
+                  </b></h6>
+                <span>
+                  <%if( evento.fecha_hora_evento.substring(0,10)===evento.fecha_hora_evento.substring(11,21) ){%>
+                    <div class="valign-wrapper"> <i class="material-icons space-icon"> calendar_month </i>
+                      <p> Fecha: <%=evento.fecha_hora_evento.substring(0,10)%>
+                      </p>
+                    </div>
+                    <%}else{%>
+                      <div class="valign-wrapper"> <i class="material-icons space-icon"> calendar_month </i>
+                        <p> Fecha: <%=evento.fecha_hora_evento.substring(0,10)%> -
+                            <%=evento.fecha_hora_evento.substring(11,21)%>
+                        </p>
+                      </div>
+                      <%}%>
+                        <div class="valign-wrapper"> <i class="material-icons space-icon"> schedule </i>
+                          <p>Horario: <%=evento.fecha_hora_evento.substring(22,27)%> -
+                              <%=evento.fecha_hora_evento.substring(27,39)%>
+                          </p>
+                        </div>
+                        <% for (let tag of tags){%>
+                          <% if (evento.id_evento==tag.id_evento_tag){ %>
+                            <div class="chip">
+                              <%= tag.nom_tag %>
+                            </div>
+                            <%}%>
+                              <%}%>
+                                </p>
+                </span>
+                <div class="display-flex justify-content-between flex-wrap  mt-4">
+                  <div class="display-flex mt-3 right-align social-icon">
+                    <a onclick="deleteEvento(this)" id="<%=evento.id_evento%>" class="primary-color-txt"> <i
+                        class="material-icons">delete</i> </a>
+                  </div>
+                </div>
+              </li>
+              <%}%>
+          </ul>
+        </div>
       </div>
-    </div>     
+    </div>
+    </div>
   </main>
 
   <script src="/js/script_delete_museo.js"></script>
