principal frontend changes

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -33,6 +33,8 @@
 
   <script>
     M.AutoInit();
+    var images = document.querySelectorAll('.parallax-img');
+    new simpleParallax(images);
 
     //Para que cuente palabras en editar guia
     $(document).ready(function() {
