--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,14 @@ main {
 }
 
 .imgr{
-  width: 270px;
-  height: 180px;
-  object-fit: cover;
+    max-width:260px;
+    max-height:180px;
+    width: 100%;
+    object-fit: cover
+}
+
+.space-icon{
+    margin-right:4px !important;
 }
 
 .primary-color{
@@ -33,9 +38,22 @@ main {
     color: #0C1A30 !important
 }
 
+.light-blue-secondary{
+    background-color:#1a3f7d !important
+}
+
+.no-spacing{
+    margin: 0px !important
+}
+
 .blue-gradient-btn{
-    background: linear-gradient(268.61deg, #0C1A30 4.48%, #254C8D 79.39%);
+    background: linear-gradient(268.61deg, #254C8D 79.39%, #0C1A30 4.48%, #254C8D 79.39%);
     border-radius: 15px !important;
+}
+
+.blue-gradient{
+    background: rgb(12,26,48);
+    background: linear-gradient(90deg, rgba(12,26,48,1) 6%, rgba(26,63,125,1) 46%, rgba(37,90,141,1) 100%);
 }
 
 .red-gradient-btn{
@@ -61,6 +79,11 @@ main {
 
 } 
 
+.container-pers{
+    margin: 0 auto;
+    width:90%;
+}
+
 .flex {
     display: flex;
     flex-wrap: wrap;
@@ -72,6 +95,7 @@ main {
     padding: 60px 0px 25px 0px;
     list-style: none;
     overflow-x: scroll;
+    padding-top:-20px;
     scroll-snap-type: x mandatory;
 }
   
@@ -80,10 +104,12 @@ main {
     flex-direction: column;
     flex: 0 0 100%;
     padding: 10px;
+    padding-top:30px !important;
     margin-left:5px;
     margin-right:5px;
     scroll-snap-align: start;
     transition: all 0.2s;
+    max-width: 330px;
 }
 
 .card-img{
@@ -153,36 +179,11 @@ main {
 .margin-10{
     margin:30px
 }
-  
-/* @media (min-width: 700px) {
-    .card {
-      flex-basis: calc(calc(100% / 3) - 20px);
-    }
-  
-    .card:not(:last-child) {
-      margin-right: 30px;
-    }
-} */
-  
-  /* @media (min-width: 1100px) {
-    .card {
-      flex-basis: calc(25% - 30px);
-    }
-  
-    .card:not(:last-child) {
-      margin-right: 40px;
-    }
-  }  */
-  
-
-
-/* File   */
 
 .customFile{
     border-bottom: 1px solid grey;
     /* border-radius: 20px; */
     padding: 6px;
-    
 }
 
 .customFile::-webkit-file-upload-button{
@@ -238,7 +239,7 @@ main {
     border-radius: 6px !important;
 }
 
-.content-wrapper-before{position:absolute;z-index:-1;top:64px;left:0;width:100%;height:185px;-webkit-transition:.3s ease all;transition:.3s ease all}
+.content-wrapper-before{position:absolute;z-index:-1;top:64px;left:0;width:100%;height:240px;-webkit-transition:.3s ease all;transition:.3s ease all}
 
 #blog-list .card.horizontal{overflow:hidden;max-height:200px}
 #blog-list .social-icon{width:7.5rem}
