--- a/views/includes/header_image.ejs
+++ b/views/includes/header_image.ejs
@@ -31,7 +31,7 @@
         <li><a href="/guias">Guías</a></li>
 
         <li><a href="/links">Links</a></li>
-        <a class="btn dropdown-trigger" id="username" href="#!" data-target="dropdown123"> <i class="material-icons left">account_circle</i></a>
+        <a class="btn dropdown-trigger light-blue-secondary" id="username" href="#!" data-target="dropdown123"> <i class="material-icons left">account_circle</i></a>
         
       </ul> 
     </div>
